<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/DarkCyan"
    tools:context="com.example.chaitanya.remotetigerapp.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remote"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        android:layout_marginTop="10dp"
        android:textColor="@color/AntiqueWhite"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_chaitanya"
        android:layout_marginTop="10dp"
        android:text="@string/chaitanya"
        android:textColor="@color/AntiqueWhite"
        android:background="@color/gray"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_hivan"
        android:layout_marginTop="10dp"
        android:text="@string/hivan"
        android:textColor="@color/AntiqueWhite"
        android:background="@color/gray"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_marcus"
        android:layout_marginTop="10dp"
        android:text="@string/marcus"
        android:textColor="@color/AntiqueWhite"
        android:background="@color/gray"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_ahemad"
        android:layout_marginTop="10dp"
        android:text="@string/ahemad"
        android:textColor="@color/AntiqueWhite"
        android:background="@color/gray"
        android:onClick="openAhmedActivity"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_sailu"
        android:layout_marginTop="10dp"
        android:text="@string/sailu"
        android:textColor="@color/AntiqueWhite"
        android:background="@color/gray"/>
</LinearLayout>
